[package]
name = "wasm-rs"
version = "0.1.0"
authors = ["westhide <mr.westhide@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["console", 'Document', 'Element', 'HtmlElement', 'Node', 'Window'] }

sycamore = "0.8"

getrandom = { version = "0.2", features = ["js"] }
nanoid = "0.4.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "^1.0" }

thiserror = "1.0"

ahash = { version = "0.8", features = ["serde"] }
indexmap = { version = "1.9", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
